k8s/test/ingress-hosts.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
  - host: contour.ubukubu.ru
    http:
      paths:
        - backend:
           serviceName: tomcat
           servicePort: 8080
