k8s/test/ingress-paths.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-paths

spec:
  rules:
  - host: contour.ubukubu.ru
    http:
      paths:
      - path: "/page1"
        backend:
          serviceName: tomcat
          servicePort: 8080
