k8s/test/new-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: tomcat
spec:
  rules:
  - host: contour.ubukubu.ru
    http:
      paths:
      - backend:
          service:
            name: tomcat
            port:
              number: 8080
        path: /
        pathType: Exact
status:
  loadBalancer: {}
